# reid-on-mac

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
src/: __init__.py  audio_manager.py  config.py  logger.py  person_reid.py  person_tracker.py
