[project]
name = "project-mew"
version = "0.1.0"
description = "YOLOv8 + BoT-SORT Person Re-identification System"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "scikit-learn>=1.3.0",
    "pillow>=9.0.0",
    "pydub>=0.25.0",
    "lap>=0.4.0",
]
